@@ -18,6 +18,7 @@ NEWS
   * Fix accesslog port (should be port from the connection, not the "server.port") (#1618)
   * Fix mod_fastcgi prefix matching: match the prefix always against url, not the absolute filepath (regardless of check-local)
   * Overwrite Content-Type header in mod_dirlisting instead of inserting (#1614), patch by Henrik Holst
+  * Handle EINTR in mod_cgi during write() (#1640)
 
 - 1.4.19 - 2008-03-10
 
